<?xml version="1.0" encoding="utf-8"?><!--
  ~     Copyright 2015 Tom Cameron
  ~
  ~        Licensed under the Apache License, Version 2.0 (the "License");
  ~        you may not use this file except in compliance with the License.
  ~        You may obtain a copy of the License at
  ~
  ~            http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~        Unless required by applicable law or agreed to in writing, software
  ~        distributed under the License is distributed on an "AS IS" BASIS,
  ~        WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~        See the License for the specific language governing permissions and
  ~        limitations under the License.
  ~
  -->

<resources>
    <string name="app_name">Just Java</string>
    <string name="action_settings">Settings</string>

    <string name="high_coffee_message">That\'s a lot of coffee!</string>
    <string name="max_coffee_message">Maximum coffees.</string>
    <string name="min_order_message">You must order at least %d coffee.</string>
    <string name="max_order_message">You can not order more than %d coffee.</string>
    <string name="order_thanks">Thanks! Order Number %d.</string>
    <string name="quantity">Quantity</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="total">Total</string>
    <string name="order">Order</string>
</resources>
